--- a/exercise35/index.html
+++ b/exercise35/index.html
@@ -1,4 +1,6 @@
 <script>
+/* Implement the Push method of the Singly Linked List */
+
 class Node {
     constructor(val) {
         this.val = val;
