--- a/exercise37/index.html
+++ b/exercise37/index.html
@@ -56,6 +56,9 @@ class SinglyLinkedList {
         var temp = this.head;
         this.head = this.head.next;
         this.length--;
+        if (this.length == 0) {
+            this.tail = null;
+        }
         return temp;
     }
 }
