--- a/exercise41/index.html
+++ b/exercise41/index.html
@@ -99,8 +99,14 @@ class SinglyLinkedList {
 
     insert(idx, val) {
         if (idx < 0 || idx > this.length) return false;
-        if (idx == 0) return this.unshift(val);
-        if (idx == this.length) return this.push(val);
+        if (idx == 0) {
+            this.unshift(val);
+            return true;
+        }
+        if (idx == this.length) {
+            this.push(val);
+            return true;
+        }
 
         var prev = this.get(idx - 1);
         var n = new Node(val);
