--- a/exercise47/index.html
+++ b/exercise47/index.html
@@ -59,10 +59,11 @@ class DoublyLinkedList {
             this.head = null;
             this.tail = null;
         }
-
-        this.head = oldHead.next;
-        this.head.prev = null;
-        oldHead.next = null;
+        else {
+            this.head = oldHead.next;
+            this.head.prev = null;
+            oldHead.next = null;
+        }
         this.length--;
         return oldHead;
     }
