--- a/exercise68/index.html
+++ b/exercise68/index.html
@@ -7,7 +7,9 @@ class Graph {
     }
 
     addVertex(val) {
-        this.adjacencyList[val] = [];
+        if (!this.adjacencyList[val]) {
+            this.adjacencyList[val] = [];
+        }
     }
 }
 
